tests/reference/asr-test_float_semantic_error-58c0c90.stderr
semantic error: Unsupported type annotation: float
 --> tests/errors/test_float_semantic_error.py:4:9
  |
4 |     pi: float = 3.14
  |         ^^^^^ 
